--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 plugins {
-    id 'java'
     id 'application'
     id 'info.solidsoft.pitest' version '1.7.4'
     id 'jacoco'
+    id 'groovy'
 }
 
 group 'feup.ldts.flappy'
@@ -29,11 +29,11 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
     testImplementation 'org.mockito:mockito-core:3.7.7'
     implementation group: 'com.googlecode.lanterna', name: 'lanterna', version: '3.1.1'
+    testImplementation 'org.spockframework:spock-core:2.0-groovy-3.0'
+    testImplementation 'org.codehaus.groovy:groovy-all:3.0.8'
 }
 
 test {
-    useJUnitPlatform {
-        includeEngines('junit-jupiter')
-    }
+    useJUnitPlatform()
     finalizedBy jacocoTestReport
 }
